pratique/2020-p2-f2-estrada/2020-p2-f2-estrada-comp.txt
2020-p2-f2-estrada.cpp: In function ‘int main()’:
2020-p2-f2-estrada.cpp:24:22: error: ‘setprecision’ was not declared in this scope
   24 |     cout << fixed << setprecision(2) << min_vizinhanca << endl;
      |                      ^~~~~~~~~~~~
